tests/samples/negative/types/bcast_size_mismatch.ax
module bcast_size_mismatch;

fn main() -> i32 {
    let value: u64 = bitcast<u64>(((1) as u32));
    return ((value) as i32);
}
